shared/src/test/data/yeast/invalid-json/incomplete-seq-2.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'key1'
Indicator           9,  2,  7 '\"'
EndScalar          10,  2,  8 ''
Indicator          10,  2,  8 ':'
WhiteSpace         11,  2,  9 ' '
BeginSequence      12,  2, 10 '['
LineBreak          13,  2, 11 '\n'
WhiteSpace         14,  3,  0 '    '
BeginScalar        18,  3,  4 ''
Indicator          18,  3,  4 '\"'
Text               19,  3,  5 'value11'
Indicator          26,  3, 12 '\"'
EndScalar          27,  3, 13 ''
LineBreak          27,  3, 13 '\n'
LineBreak          28,  4,  0 '\n'
WhiteSpace         29,  5,  0 '  '
BeginScalar        31,  5,  2 ''
Indicator          31,  5,  2 '\"'
Text               32,  5,  3 'key2'
Indicator          36,  5,  7 '\"'
EndScalar          37,  5,  8 ''
Indicator          37,  5,  8 ':'
WhiteSpace         38,  5,  9 ' '
BeginSequence      39,  5, 10 '['
LineBreak          40,  5, 11 '\n'
WhiteSpace         41,  6,  0 '    '
BeginScalar        45,  6,  4 ''
Indicator          45,  6,  4 '\"'
Text               46,  6,  5 'value21'
Indicator          53,  6, 12 '\"'
EndScalar          54,  6, 13 ''
LineBreak          54,  6, 13 '\n'
WhiteSpace         55,  7,  0 '  '
EndSequence        57,  7,  2 ']'
Indicator          58,  7,  3 ','
LineBreak          59,  7,  4 '\n'
WhiteSpace         60,  8,  0 '  '
BeginScalar        62,  8,  2 ''
Indicator          62,  8,  2 '\"'
Text               63,  8,  3 'key3'
Indicator          67,  8,  7 '\"'
EndScalar          68,  8,  8 ''
Indicator          68,  8,  8 ':'
WhiteSpace         69,  8,  9 ' '
BeginScalar        70,  8, 10 ''
Indicator          70,  8, 10 '\"'
Text               71,  8, 11 'value3'
Indicator          77,  8, 17 '\"'
EndScalar          78,  8, 18 ''
LineBreak          78,  8, 18 '\n'
EndMapping         79,  9,  0 '}'
